platform/stack/packages/application/coder/manifests/install.yaml
# CODER INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/application/coder/generate-manifests.sh'
---
# Source: coder/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: adhar-system
  labels:
    helm.sh/chart: coder-2.37.0
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: "2.37.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "http"
      port: 80
      targetPort: "http"
      protocol: TCP
  selector:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
---
# Source: coder/templates/coder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.37.0
    helm.sh/chart: coder-2.37.0
  name: coder
  namespace: adhar-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coder
      app.kubernetes.io/name: coder
  template:
    metadata:
      annotations:
        app.kubernetes.io/component: coderd
      labels:
        app.kubernetes.io/instance: coder
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: coder
        app.kubernetes.io/part-of: coder
        app.kubernetes.io/version: 2.37.0
        helm.sh/chart: coder-2.37.0
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - coder
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - server
        command:
        - /opt/coder
        image: ghcr.io/coder/coder:v2.37.0
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: coder
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
        resources:
          limits:
            cpu: 2000m
            memory: 4096Mi
          requests:
            cpu: 2000m
            memory: 4096Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: null
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /etc/adhar-ca
          name: adhar-ca
          readOnly: true
      restartPolicy: Always
      serviceAccountName: coder
      terminationGracePeriodSeconds: 60
      volumes:
      - name: adhar-ca
        secret:
          items:
          - key: tls.crt
            path: adhar-gateway.crt
          secretName: adhar-cert
